# Gruppe_11_Doku

./: Generator.hs  Main.hs  README.MD  hasdoku.cabal  solver.hs
dist-newstyle/cache/: compiler  config
