cabal-version: 2.4

name:                Hasdoku
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              HasDoku
maintainer:          nomail@mail.com
category:            Game
build-type:          Simple
extra-doc-files:     CHANGELOG.md

executable Hasdoku
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base >=4.17.2.1 && <4.18, random

    -- Directories containing source files.
    hs-source-dirs:   exe

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- GHC options for this executable
    ghc-options: -Wall