cabal-version:      3.6
name:               SudokuGame
version:            1.0.0
license:            MIT
license-file:       LICENSE
author:             Merostax Team
maintainer:         merostax@example.com
category:           Game
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md

executable SudokuGame
  main-is:           Main.hs
  hs-source-dirs:    .
  other-modules:     Generator, Solver
  build-depends:
      base >=4.17 && <5,
      random
  default-language:  Haskell2010

